Quelques fractions d'interfaces agencées
Filtres, un peu de header, un peu de graphiques
Dimensions globales définies

--- a/EcoleData/App.xaml
+++ b/EcoleData/App.xaml
@@ -4,6 +4,22 @@
              xmlns:local="clr-namespace:EcoleData"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style x:Key="FilterGroupBox" TargetType="{x:Type GroupBox}">
+            <Setter Property="Margin" Value="5, 5, 5, 5" />
+            <Setter Property="BorderThickness" Value="1" />
+            <Setter Property="BorderBrush" Value="Black" />
+        </Style>
+
+        <Style x:Key="BtnStyle" TargetType="{x:Type Button}">
+            <Style.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="5"/>
+                </Style>
+            </Style.Resources>
+            <Setter Property="Background" Value="Tan" />
+            <Setter Property="BorderThickness" Value="2" />
+            <Setter Property="BorderBrush" Value="Black" />
+        </Style>
     </Application.Resources>
 </Application>
+
