--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EcoleData"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="1280" WindowState="Maximized" MinHeight="600" MinWidth="1000">
+        Title="MainWindow" Height="800" Width="1280" WindowState="Maximized" MinHeight="600" MinWidth="1000" Loaded="Window_Loaded">
     <Window.Resources>
         <BitmapImage x:Key="FilterIcon" UriSource="/EcoleData;component/Media/icons/icons8-filter-16.png"/>
         <BitmapImage x:Key="CalendarIcon" UriSource="/Media/icons/icons8-calendar-16.png"/>
