--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -100,11 +100,9 @@
                                     <RowDefinition Height="*"/>
                                     <RowDefinition Height="*"/>
                                 </Grid.RowDefinitions>
-                                <ComboBox Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Height="25" Margin="10">
-                                    
-                                </ComboBox>
-                                <TextBlock Grid.Column="1" Grid.Row="1" FontSize="14" FontWeight="Bold" VerticalAlignment="Bottom" TextAlignment="Center" Margin="5">École de [nom]</TextBlock>
-                                <TextBlock Grid.Column="1" Grid.Row="2" FontWeight="Bold" TextAlignment="Center">X capteurs</TextBlock>
+                                <ComboBox x:Name="SchoolsComboBox" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Height="25" Margin="10" SelectionChanged="SchoolsComboBox_SelectionChanged" FontSize="16" Text="Sélectionner une école..."/>
+                                <TextBlock x:Name="SchoolTitle" Grid.Column="1" Grid.Row="1" FontSize="14" FontWeight="Bold" VerticalAlignment="Bottom" TextAlignment="Center" Margin="5">École de [nom]</TextBlock>
+                                <TextBlock x:Name="SchoolCaptorsNb" Grid.Column="1" Grid.Row="2" FontWeight="Bold" TextAlignment="Center">X capteurs</TextBlock>
                                 <Canvas Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" MinHeight="20" Width="100" Background="LightGray" Margin="10"></Canvas>
                             </Grid>
                             
@@ -118,7 +116,7 @@
                                 </StackPanel>
                             </GroupBox.Header>
 
-                            <Grid Margin="5">
+                            <Grid x:Name="FloorsGrid" Margin="5,5,5,2">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition/>
                                     <ColumnDefinition/>
@@ -141,8 +139,8 @@
                                 </StackPanel>
                             </GroupBox.Header>
                             <StackPanel Orientation="Vertical" Margin="5">
-                                <CheckBox Margin="0,5,0,5"> Capteurs salles </CheckBox>
-                                <CheckBox Margin="0,5,0,0"> Capteurs couloirs</CheckBox>
+                                <CheckBox x:Name="SalleSensorCB" Margin="0,5,0,5"> Capteurs salles </CheckBox>
+                                <CheckBox x:Name="CouloirSensorCB" Margin="0,5,0,0"> Capteurs couloirs</CheckBox>
                             </StackPanel>
 
                         </GroupBox>
@@ -179,9 +177,9 @@
                             </GroupBox.Header>
                             <StackPanel Orientation="Horizontal" Margin="5">
                                 <TextBlock VerticalAlignment="Center">du</TextBlock>
-                                <DatePicker VerticalAlignment="Center" Width="100" SelectedDate="01-01-1970" Margin="5"></DatePicker>
+                                <DatePicker x:Name="StartDatePicker" CalendarStyle="{StaticResource styleCalendar}" VerticalAlignment="Center" Width="100" SelectedDate="01-01-1970" Margin="5"></DatePicker>
                                 <TextBlock VerticalAlignment="Center">au</TextBlock>
-                                <DatePicker VerticalAlignment="Center" Width="100" SelectedDate="01-01-1970" Margin="5"></DatePicker>
+                                <DatePicker x:Name="EndDatePicker" CalendarStyle="{StaticResource styleCalendar}" VerticalAlignment="Center" Width="100" SelectedDate="01-01-1970" Margin="5"></DatePicker>
                             </StackPanel>
                         </GroupBox>
                     </StackPanel>
@@ -199,7 +197,7 @@
                 </StackPanel>
             </GroupBox.Header>
             <!-- Insérer graphique ici -->
-            
+            <TextBlock x:Name="ChooseSchoolHintMessage" TextAlignment="Center" VerticalAlignment="Center" Foreground="Gray">Veuillez sélectionner une école.</TextBlock>
         </GroupBox>
         <!-- Footer -->
         <StackPanel Grid.ColumnSpan="2" Grid.Row="2" Orientation="Vertical" Margin="10">
