--- a/App.xaml
+++ b/App.xaml
@@ -53,11 +53,12 @@
             <Setter Property="VerticalAlignment" Value="Center" />
 
         </Style>
-
-        
-
-
-
+        <Style x:Key="ErrorMessageStyle" TargetType="{x:Type TextBlock}">
+            <Setter Property="Foreground" Value="DarkRed"/>
+            <Setter Property="Margin" Value="15, 0, 15, 0"/>
+            <Setter Property="TextWrapping" Value="Wrap" />
+            <Setter Property="Visibility" Value="Collapsed"/>
+        </Style>
     </Application.Resources>
 </Application>
 
