--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,4 +1,5 @@
 ﻿<Window x:Class="EcoleData.MainWindow"
+        x:Name="LayoutWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +7,7 @@
         xmlns:oxy="http://oxyplot.org/wpf"
         xmlns:local="clr-namespace:EcoleData"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="1280" WindowState="Maximized" MinHeight="600" MinWidth="1000" ContentRendered="Window_ContentRendered">
+        Title="EcoleDATA - TPI" Height="800" Width="1280" WindowState="Maximized" MinHeight="600" MinWidth="1000" ContentRendered="Window_ContentRendered">
     <Window.Resources>
         <BitmapImage x:Key="FilterIcon" UriSource="/EcoleData;component/Media/icons/icons8-filter-16.png"/>
         <BitmapImage x:Key="CalendarIcon" UriSource="/Media/icons/icons8-calendar-16.png"/>
@@ -69,7 +70,7 @@
                 </Grid.RowDefinitions>
                 <!--Ligne (icône + bouton) Réinitialiser les filtres-->
                 <DockPanel Grid.Row="0">
-                    <Button HorizontalAlignment="Right" Margin="0,0,10,0" Background="Transparent" BorderThickness="0">
+                    <Button x:Name="ResetFiltersBtn" HorizontalAlignment="Right" Margin="0,0,10,0" Background="Transparent" BorderThickness="0" Visibility="Hidden" Click="ResetFiltersBtn_Click" >
                         <StackPanel Orientation="Horizontal">
                             <Image Width="16" Source="{StaticResource ClearFiltersIcon}" />
                             <TextBlock Margin="7,0,7,0" VerticalAlignment="Center">Réinitialiser les filtres</TextBlock>
@@ -110,7 +111,7 @@
                                 <TextBlock x:Name="SchoolCaptorsNb" Grid.Column="1" Grid.Row="2" FontWeight="Bold" TextAlignment="Center">X capteurs</TextBlock>
                                 <Canvas Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" MinHeight="20" Width="100" Background="LightGray" Margin="10"></Canvas>
                             </Grid>
-                            
+
                         </GroupBox>
                         <!--Groupe Étage-->
                         <GroupBox MinHeight="80" Style="{StaticResource FilterGroupBox}">
@@ -135,6 +136,7 @@
                                 </Grid.RowDefinitions>
                             </Grid>
                         </GroupBox>
+                        <TextBlock x:Name="FloorsFiltersErrorMessage" Style="{StaticResource ErrorMessageStyle}">Veuillez cocher au moins un étage.</TextBlock>
                         <!--Groupe Emplacement-->
                         <GroupBox MinHeight="80" Style="{StaticResource FilterGroupBox}">
                             <GroupBox.Header>
@@ -144,11 +146,11 @@
                                 </StackPanel>
                             </GroupBox.Header>
                             <StackPanel Orientation="Vertical" Margin="5">
-                                <CheckBox x:Name="SalleSensorCB" Margin="0,5,0,5"> Capteurs salles </CheckBox>
-                                <CheckBox x:Name="CouloirSensorCB" Margin="0,5,0,0"> Capteurs couloirs</CheckBox>
+                                <CheckBox x:Name="SalleSensorCB" Margin="0,5,0,5">Capteurs salles</CheckBox>
+                                <CheckBox x:Name="CouloirSensorCB" Margin="0,5,0,0">Capteurs couloirs</CheckBox>
                             </StackPanel>
-
                         </GroupBox>
+                        <TextBlock x:Name="LocationsFilterErrorMessage" Style="{StaticResource ErrorMessageStyle}">Veuillez cocher au moins un emplacement.</TextBlock>
                         <!--Groupe Valeurs-->
                         <GroupBox MinHeight="80" Style="{StaticResource FilterGroupBox}">
                             <GroupBox.Header>
@@ -172,6 +174,7 @@
                                 <CheckBox x:Name="HumidityCB" Grid.Row="1" Grid.Column="0" Style="{StaticResource CheckBoxStyle}">Humidité</CheckBox>
                             </Grid>
                         </GroupBox>
+                        <TextBlock x:Name="ValuesFilterErrorMessage" Style="{StaticResource ErrorMessageStyle}">Veuillez cocher au moins une valeur.</TextBlock>
                         <!--Groupe Plage de dates-->
                         <GroupBox Style="{StaticResource FilterGroupBox}">
                             <GroupBox.Header>
@@ -187,6 +190,7 @@
                                 <DatePicker x:Name="EndDatePicker" CalendarStyle="{StaticResource styleCalendar}" VerticalAlignment="Center" Width="100" SelectedDate="01-01-1970" Margin="5"></DatePicker>
                             </StackPanel>
                         </GroupBox>
+                        <TextBlock x:Name="DatesFilterErrorMessage" Style="{StaticResource ErrorMessageStyle}">Une erreur est survenue avec les dates.</TextBlock>
                     </StackPanel>
                 </ScrollViewer>
                 <!--Bouton Appliquer les filtres-->
@@ -201,9 +205,10 @@
                     <TextBlock FontWeight="UltraBold" FontSize="20" Margin="7,0,0,0">GRAPHIQUE</TextBlock>
                 </StackPanel>
             </GroupBox.Header>
-            <!-- Insérer graphique ici -->
-            <oxy:PlotView Model="{Binding MyModel}">
-            </oxy:PlotView>
+            <!-- Insertion du graphique ici -->
+            <Grid x:Name="GraphPlace">
+                <TextBlock x:Name="NoDataLabel" TextAlignment="Center" VerticalAlignment="Center" Foreground="DarkGray">Pas de données à afficher.</TextBlock>
+            </Grid>
         </GroupBox>
         <!-- Footer -->
         <StackPanel Grid.ColumnSpan="2" Grid.Row="2" Orientation="Vertical" Margin="10">
