--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,9 +7,9 @@
         xmlns:oxy="http://oxyplot.org/wpf"
         xmlns:local="clr-namespace:EcoleData"
         mc:Ignorable="d"
-        Title="EcoleDATA - TPI" Height="800" Width="1280" WindowState="Maximized" MinHeight="600" MinWidth="1000" ContentRendered="Window_ContentRendered">
+        Title="EcoleDATA - TPI Morgane Lebre v1.0.0" Height="800" Width="1280" WindowState="Maximized" MinHeight="600" MinWidth="1000" ContentRendered="Window_ContentRendered">
     <Window.Resources>
-        <BitmapImage x:Key="FilterIcon" UriSource="/EcoleData;component/Media/icons/icons8-filter-16.png"/>
+        <BitmapImage x:Key="FilterIcon" UriSource="/Media/icons/icons8-filter-16.png"/>
         <BitmapImage x:Key="CalendarIcon" UriSource="/Media/icons/icons8-calendar-16.png"/>
         <BitmapImage x:Key="ClearFiltersIcon" UriSource="/Media/icons/icons8-clear-filters-16.png"/>
         <BitmapImage x:Key="LocationIcon" UriSource="/Media/icons/icons8-location-16.png"/>
@@ -18,12 +18,15 @@
         <BitmapImage x:Key="StairsIcon" UriSource="/Media/icons/icons8-stairs-up-16.png"/>
         <BitmapImage x:Key="GraphIcon" UriSource="/Media/icons/icons8-stocks-16.png"/>
         <BitmapImage x:Key="FolderIcon" UriSource="/Media/icons/icons8-folder-48.png"/>
-        <BitmapImage x:Key="TempLogo" UriSource="/EcoleData;component/Media/tempLogo.png"/>
+        <BitmapImage x:Key="TempLogo" UriSource="/Media/tempLogo.png"/>
+        <BitmapImage x:Key="FullLine" UriSource="/Media/fullLine.png"/>
+        <BitmapImage x:Key="DashedLine" UriSource="/Media/dashedLine.png"/>
+        <BitmapImage x:Key="MainLogo" UriSource="/Media/mainLogo.png"/>
     </Window.Resources>
     <Window.DataContext>
         <local:OxyViewModel/>
     </Window.DataContext>
-    
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="330" />
@@ -36,12 +39,12 @@
         </Grid.RowDefinitions>
         <!-- TITRE -->
         <StackPanel Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Orientation="Horizontal">
-            <Image Source="{StaticResource TempLogo}"></Image>
-            <TextBlock FontSize="50" FontFamily="Roboto" FontWeight="Bold" VerticalAlignment="Center">ÉcoleDATA</TextBlock>
+            <Image Source="{StaticResource MainLogo}" Margin="10, 10, 20, 10"></Image>
+            <TextBlock FontSize="50" FontFamily="{StaticResource Roboto}" FontWeight="Bold" VerticalAlignment="Center">ÉcoleDATA</TextBlock>
         </StackPanel>
         <!-- Choix dossier -->
         <DockPanel Grid.Column="1" Grid.Row="0" Margin="10">
-            <TextBlock x:Name="LoadMessageTextBox" Margin="50, 20, 0, 20" VerticalAlignment="Center" FontFamily="Roboto" FontSize="20">Chargement des données en cours...</TextBlock>
+            <TextBlock x:Name="LoadMessageTextBox" Margin="50, 20, 0, 20" VerticalAlignment="Center" FontFamily="{StaticResource Roboto}" FontSize="20">Chargement des données en cours...</TextBlock>
             <Grid HorizontalAlignment="Right" Margin="0,0,5,0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
@@ -49,13 +52,13 @@
                 </Grid.RowDefinitions>
                 <StackPanel Orientation="Horizontal">
                     <Image Grid.Row="0" VerticalAlignment="Center" Source="{StaticResource FolderIcon}" Height="31" Width="28"></Image>
-                    <TextBlock x:Name="FolderNameDisplayer" Grid.Row="0" VerticalAlignment="Center" Margin="7,0,0,0" FontSize="14" FontFamily="Roboto" Foreground="Gray">[chemin du fichier des dossiers]</TextBlock>
+                    <TextBlock x:Name="FolderNameDisplayer" Grid.Row="0" VerticalAlignment="Center" Margin="7,0,0,0" FontSize="14" FontFamily="{StaticResource Roboto}" Foreground="Gray">[chemin du fichier des dossiers]</TextBlock>
                 </StackPanel>
-                <Button Grid.Row="1" HorizontalAlignment="Right" Height="30" Width="150" FontFamily="Roboto" Style="{StaticResource BtnStyle}" Click="ChooseFolderBtn_Click">Choisir dossier...</Button>
+                <Button Grid.Row="1" HorizontalAlignment="Right" Height="30" Width="150" FontFamily="{StaticResource Roboto}" Style="{StaticResource BtnStyle}" Click="ChooseFolderBtn_Click">Choisir dossier...</Button>
             </Grid>
         </DockPanel>
-        
-        <GroupBox Grid.Row="1" Grid.Column="0" Margin="10,10,5,10" FontFamily="Roboto" BorderThickness="2" BorderBrush="Black">
+
+        <GroupBox Grid.Row="1" Grid.Column="0" Margin="10,10,5,10" FontFamily="{StaticResource Roboto}" BorderThickness="2" BorderBrush="Black">
             <GroupBox.Header>
                 <StackPanel Orientation="Horizontal">
                     <Image Source="{StaticResource FilterIcon}" />
@@ -147,8 +150,14 @@
                                 </StackPanel>
                             </GroupBox.Header>
                             <StackPanel Orientation="Vertical" Margin="5">
-                                <CheckBox x:Name="SalleSensorCB" Margin="0,5,0,5">Capteurs salles</CheckBox>
-                                <CheckBox x:Name="CouloirSensorCB" Margin="0,5,0,0">Capteurs couloirs</CheckBox>
+                                <DockPanel>
+                                    <CheckBox x:Name="SalleSensorCB" Margin="0,5,0,5">Capteurs salles</CheckBox>
+                                    <Image Source="{StaticResource FullLine}" Margin="10, 0, 0, 0" Width="69" DockPanel.Dock="Right"/>
+                                </DockPanel>
+                                <DockPanel>
+                                    <CheckBox x:Name="CouloirSensorCB" Margin="0,5,0,0">Capteurs couloirs</CheckBox>
+                                    <Image Source="{StaticResource DashedLine}" Width="69" DockPanel.Dock="Right"></Image>
+                                </DockPanel>
                             </StackPanel>
                         </GroupBox>
                         <TextBlock x:Name="LocationsFilterErrorMessage" Style="{StaticResource ErrorMessageStyle}">Veuillez cocher au moins un emplacement.</TextBlock>
@@ -199,7 +208,7 @@
             </Grid>
         </GroupBox>
         <!-- Graphique -->
-        <GroupBox Grid.Row="1" Grid.Column="1" Margin="5,10,10,10" FontFamily="Roboto" BorderThickness="2" BorderBrush="Black">
+        <GroupBox Grid.Row="1" Grid.Column="1" Margin="5,10,10,10" FontFamily="{StaticResource Roboto}" BorderThickness="2" BorderBrush="Black">
             <GroupBox.Header>
                 <StackPanel Orientation="Horizontal">
                     <Image Source="{StaticResource GraphIcon}" />
@@ -213,7 +222,7 @@
         </GroupBox>
         <!-- Footer -->
         <StackPanel Grid.ColumnSpan="2" Grid.Row="2" Orientation="Vertical" Margin="10">
-            <TextBlock TextAlignment="Right">[texte de présentation]</TextBlock>
+            <TextBlock TextAlignment="Right" Foreground="Gray" Margin="0,0,20,0">ÉcoleDATA - TPI Morgane Lebre v1.0.0</TextBlock>
         </StackPanel>
     </Grid>
 </Window>
