--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,5 +1,5 @@
 ﻿<Window x:Class="EcoleData.MainWindow"
-        x:Name="LayoutWindow"
+        x:Name="layoutWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -18,7 +18,6 @@
         <BitmapImage x:Key="StairsIcon" UriSource="/Media/icons/icons8-stairs-up-16.png"/>
         <BitmapImage x:Key="GraphIcon" UriSource="/Media/icons/icons8-stocks-16.png"/>
         <BitmapImage x:Key="FolderIcon" UriSource="/Media/icons/icons8-folder-48.png"/>
-        <BitmapImage x:Key="TempLogo" UriSource="/Media/tempLogo.png"/>
         <BitmapImage x:Key="FullLine" UriSource="/Media/fullLine.png"/>
         <BitmapImage x:Key="DashedLine" UriSource="/Media/dashedLine.png"/>
         <BitmapImage x:Key="MainLogo" UriSource="/Media/mainLogo.png"/>
@@ -44,7 +43,7 @@
         </StackPanel>
         <!-- Choix dossier -->
         <DockPanel Grid.Column="1" Grid.Row="0" Margin="10">
-            <TextBlock x:Name="LoadMessageTextBox" Margin="50, 20, 0, 20" VerticalAlignment="Center" FontFamily="{StaticResource Roboto}" FontSize="20">Chargement des données en cours...</TextBlock>
+            <TextBlock x:Name="loadMessageTB" Margin="50, 20, 0, 20" VerticalAlignment="Center" FontFamily="{StaticResource Roboto}" FontSize="20">Chargement des données en cours...</TextBlock>
             <Grid HorizontalAlignment="Right" Margin="0,0,5,0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
@@ -52,7 +51,7 @@
                 </Grid.RowDefinitions>
                 <StackPanel Orientation="Horizontal">
                     <Image Grid.Row="0" VerticalAlignment="Center" Source="{StaticResource FolderIcon}" Height="31" Width="28"></Image>
-                    <TextBlock x:Name="FolderNameDisplayer" Grid.Row="0" VerticalAlignment="Center" Margin="7,0,0,0" FontSize="14" FontFamily="{StaticResource Roboto}" Foreground="Gray">[chemin du fichier des dossiers]</TextBlock>
+                    <TextBlock x:Name="folderNameTB" Grid.Row="0" VerticalAlignment="Center" Margin="7,0,0,0" FontSize="14" FontFamily="{StaticResource Roboto}" Foreground="Gray">[chemin du fichier des dossiers]</TextBlock>
                 </StackPanel>
                 <Button Grid.Row="1" HorizontalAlignment="Right" Height="30" Width="150" FontFamily="{StaticResource Roboto}" Style="{StaticResource BtnStyle}" Click="ChooseFolderBtn_Click">Choisir dossier...</Button>
             </Grid>
@@ -73,7 +72,7 @@
                 </Grid.RowDefinitions>
                 <!--Ligne (icône + bouton) Réinitialiser les filtres-->
                 <DockPanel Grid.Row="0">
-                    <Button x:Name="ResetFiltersBtn" HorizontalAlignment="Right" Margin="0,0,10,0" Background="Transparent" BorderThickness="0" Visibility="Hidden" Click="ResetFiltersBtn_Click" >
+                    <Button x:Name="resetFiltersBtn" HorizontalAlignment="Right" Margin="0,0,10,0" Background="Transparent" BorderThickness="0" Visibility="Visible" Click="ResetFiltersBtn_Click" >
                         <StackPanel Orientation="Horizontal">
                             <Image Width="16" Source="{StaticResource ClearFiltersIcon}" />
                             <TextBlock Margin="7,0,7,0" VerticalAlignment="Center">Réinitialiser les filtres</TextBlock>
@@ -109,10 +108,10 @@
                                     <RowDefinition Height="*"/>
                                     <RowDefinition Height="*"/>
                                 </Grid.RowDefinitions>
-                                <ComboBox x:Name="SchoolsComboBox" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Height="25" Margin="10" SelectionChanged="SchoolsComboBox_SelectionChanged" IsEnabled="False" FontSize="16" Text="Sélectionner une école..."/>
-                                <TextBlock x:Name="SchoolTitle" Grid.Column="1" Grid.Row="1" FontSize="14" FontWeight="Bold" VerticalAlignment="Bottom" TextAlignment="Center" Margin="5">École de [nom]</TextBlock>
-                                <TextBlock x:Name="SchoolCaptorsNb" Grid.Column="1" Grid.Row="2" FontWeight="Bold" TextAlignment="Center">X capteurs</TextBlock>
-                                <Grid x:Name="LogoPlace" ClipToBounds="True" Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" MinWidth="70" Margin="30, 10, 10, 10">
+                                <ComboBox x:Name="schoolsComboBox" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Height="25" Margin="10" SelectionChanged="SchoolsComboBox_SelectionChanged" IsEnabled="False" FontSize="16" Text="Sélectionner une école..."/>
+                                <TextBlock x:Name="schoolTitle" Grid.Column="1" Grid.Row="1" FontSize="14" FontWeight="Bold" VerticalAlignment="Bottom" TextAlignment="Center" Margin="5">École de [nom]</TextBlock>
+                                <TextBlock x:Name="schoolCaptorsNb" Grid.Column="1" Grid.Row="2" FontWeight="Bold" TextAlignment="Center">X capteurs</TextBlock>
+                                <Grid x:Name="logoPlace" ClipToBounds="True" Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" MinWidth="70" Margin="30, 10, 10, 10">
                                 </Grid>
                             </Grid>
 
@@ -126,7 +125,7 @@
                                 </StackPanel>
                             </GroupBox.Header>
 
-                            <Grid x:Name="FloorsGrid" Margin="5,5,5,2">
+                            <Grid x:Name="floorsGrid" Margin="5,5,5,2">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition/>
                                     <ColumnDefinition/>
@@ -140,7 +139,7 @@
                                 </Grid.RowDefinitions>
                             </Grid>
                         </GroupBox>
-                        <TextBlock x:Name="FloorsFiltersErrorMessage" Style="{StaticResource ErrorMessageStyle}">Veuillez cocher au moins un étage.</TextBlock>
+                        <TextBlock x:Name="floorsFiltersErrorMsg" Style="{StaticResource ErrorMessageStyle}">Veuillez cocher au moins un étage.</TextBlock>
                         <!--Groupe Emplacement-->
                         <GroupBox MinHeight="80" Style="{StaticResource FilterGroupBox}">
                             <GroupBox.Header>
@@ -151,16 +150,16 @@
                             </GroupBox.Header>
                             <StackPanel Orientation="Vertical" Margin="5">
                                 <DockPanel>
-                                    <CheckBox x:Name="SalleSensorCB" Margin="0,5,0,5">Capteurs salles</CheckBox>
+                                    <CheckBox x:Name="salleSensorCB" Margin="0,5,0,5">Capteurs salles</CheckBox>
                                     <Image Source="{StaticResource FullLine}" Margin="10, 0, 0, 0" Width="69" DockPanel.Dock="Right"/>
                                 </DockPanel>
                                 <DockPanel>
-                                    <CheckBox x:Name="CouloirSensorCB" Margin="0,5,0,0">Capteurs couloirs</CheckBox>
+                                    <CheckBox x:Name="couloirSensorCB" Margin="0,5,0,0">Capteurs couloirs</CheckBox>
                                     <Image Source="{StaticResource DashedLine}" Width="69" DockPanel.Dock="Right"></Image>
                                 </DockPanel>
                             </StackPanel>
                         </GroupBox>
-                        <TextBlock x:Name="LocationsFilterErrorMessage" Style="{StaticResource ErrorMessageStyle}">Veuillez cocher au moins un emplacement.</TextBlock>
+                        <TextBlock x:Name="locationsFilterErrorMsg" Style="{StaticResource ErrorMessageStyle}">Veuillez cocher au moins un emplacement.</TextBlock>
                         <!--Groupe Valeurs-->
                         <GroupBox MinHeight="80" Style="{StaticResource FilterGroupBox}">
                             <GroupBox.Header>
@@ -179,12 +178,12 @@
                                     <RowDefinition/>
                                 </Grid.RowDefinitions>
 
-                                <CheckBox x:Name="TemperatureCB" Grid.Row="0" Grid.Column="0" Style="{StaticResource CheckBoxStyle}">Température</CheckBox>
-                                <CheckBox x:Name="DewPointCB" Grid.Row="0" Grid.Column="1" Style="{StaticResource CheckBoxStyle}">Point de rosée</CheckBox>
-                                <CheckBox x:Name="HumidityCB" Grid.Row="1" Grid.Column="0" Style="{StaticResource CheckBoxStyle}">Humidité</CheckBox>
+                                <CheckBox x:Name="temperatureCB" Grid.Row="0" Grid.Column="0" Style="{StaticResource CheckBoxStyle}">Température</CheckBox>
+                                <CheckBox x:Name="dewPointCB" Grid.Row="0" Grid.Column="1" Style="{StaticResource CheckBoxStyle}">Point de rosée</CheckBox>
+                                <CheckBox x:Name="humidityCB" Grid.Row="1" Grid.Column="0" Style="{StaticResource CheckBoxStyle}">Humidité</CheckBox>
                             </Grid>
                         </GroupBox>
-                        <TextBlock x:Name="ValuesFilterErrorMessage" Style="{StaticResource ErrorMessageStyle}">Veuillez cocher au moins une valeur.</TextBlock>
+                        <TextBlock x:Name="valuesFiltersErrorMsg" Style="{StaticResource ErrorMessageStyle}">Veuillez cocher au moins une valeur.</TextBlock>
                         <!--Groupe Plage de dates-->
                         <GroupBox Style="{StaticResource FilterGroupBox}">
                             <GroupBox.Header>
@@ -195,16 +194,16 @@
                             </GroupBox.Header>
                             <StackPanel Orientation="Horizontal" Margin="5">
                                 <TextBlock VerticalAlignment="Center">du</TextBlock>
-                                <DatePicker x:Name="StartDatePicker" CalendarStyle="{StaticResource styleCalendar}" VerticalAlignment="Center" Width="100" SelectedDate="01-01-1970" Margin="5"></DatePicker>
+                                <DatePicker x:Name="startDatePicker" CalendarStyle="{StaticResource styleCalendar}" VerticalAlignment="Center" Width="100" SelectedDate="01-01-1970" Margin="5"></DatePicker>
                                 <TextBlock VerticalAlignment="Center">au</TextBlock>
-                                <DatePicker x:Name="EndDatePicker" CalendarStyle="{StaticResource styleCalendar}" VerticalAlignment="Center" Width="100" SelectedDate="01-01-1970" Margin="5"></DatePicker>
+                                <DatePicker x:Name="endDatePicker" CalendarStyle="{StaticResource styleCalendar}" VerticalAlignment="Center" Width="100" SelectedDate="01-01-1970" Margin="5"></DatePicker>
                             </StackPanel>
                         </GroupBox>
-                        <TextBlock x:Name="DatesFilterErrorMessage" Style="{StaticResource ErrorMessageStyle}">Une erreur est survenue avec les dates.</TextBlock>
+                        <TextBlock x:Name="datesFilterErrorMsg" Style="{StaticResource ErrorMessageStyle}">Une erreur est survenue avec les dates.</TextBlock>
                     </StackPanel>
                 </ScrollViewer>
                 <!--Bouton Appliquer les filtres-->
-                <Button x:Name="ApplyFiltersBtn" Style="{StaticResource BtnStyle}" Margin="20,10,20,10" Grid.Row="2" Content="Appliquer les filtres" Click="ApplyFiltersBtn_Click"/>
+                <Button x:Name="applyFiltersBtn" Style="{StaticResource BtnStyle}" Margin="20,10,20,10" Grid.Row="2" Content="Appliquer les filtres" Click="ApplyFiltersBtn_Click"/>
             </Grid>
         </GroupBox>
         <!-- Graphique -->
@@ -216,8 +215,8 @@
                 </StackPanel>
             </GroupBox.Header>
             <!-- Insertion du graphique ici -->
-            <Grid x:Name="GraphPlace">
-                <TextBlock x:Name="NoDataLabel" TextAlignment="Center" VerticalAlignment="Center" Foreground="DarkGray">Pas de données à afficher.</TextBlock>
+            <Grid x:Name="graphPlace">
+                <TextBlock x:Name="noDataMsg" TextAlignment="Center" VerticalAlignment="Center" Foreground="DarkGray">Pas de données à afficher.</TextBlock>
             </Grid>
         </GroupBox>
         <!-- Footer -->
