--- a/App.xaml
+++ b/App.xaml
@@ -1,8 +1,16 @@
-﻿<Application x:Class="EcoleData.App"
+﻿<!-- 
+    ETML
+    Autrice : Morgane Lebre
+    Date : du 13 mai au 8 juin 2022
+    Description : Classe XAML utilisée pour définir les ressources liées à l'application (style + polices) 
+-->
+
+<Application x:Class="EcoleData.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+        
         <FontFamily x:Key="Roboto">pack://application:,,,/Media/fonts/#Roboto</FontFamily>
         
         <!-- https://tarundotnet.wordpress.com/2011/12/19/how-to-enlarge-or-re-size-calendar-in-wpf-datepicker/ -->
@@ -22,6 +30,7 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        
         <Style x:Key="FilterGroupBox" TargetType="{x:Type GroupBox}">
             <Setter Property="Margin" Value="5, 5, 5, 5" />
             <Setter Property="BorderThickness" Value="1" />
@@ -40,7 +49,6 @@
         </Style>
 
         <Style x:Key="CheckBoxBorderStyle" TargetType="{x:Type Border}">
-
             <Setter Property="Width" Value="15" />
             <Setter Property="Height" Value="15" />
             <Setter Property="BorderThickness" Value="1" />
@@ -55,11 +63,11 @@
         </Style>
 
         <Style x:Key="CheckBoxStyle" TargetType="{x:Type CheckBox}">
-            <Setter Property="FontFamily" Value="Roboto" />
+            <Setter Property="FontFamily" Value="{StaticResource Roboto}" />
             <Setter Property="BorderThickness" Value="1" />
             <Setter Property="VerticalAlignment" Value="Center" />
-
         </Style>
+        
         <Style x:Key="ErrorMessageStyle" TargetType="{x:Type TextBlock}">
             <Setter Property="Foreground" Value="DarkRed"/>
             <Setter Property="Margin" Value="15, 0, 15, 0"/>
