--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,4 +1,11 @@
-﻿<Window x:Class="EcoleData.MainWindow"
+﻿<!-- 
+    ETML
+    Autrice : Morgane Lebre
+    Date : du 13 mai au 8 juin 2022
+    Description : Arborescence de tous les éléments de l’interface WPF en langage XAML. Prévisualisation possible grâce à l’outil Design de Visual Studio.
+-->
+    
+<Window x:Class="EcoleData.MainWindow"
         x:Name="layoutWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -9,6 +16,7 @@
         mc:Ignorable="d"
         Title="EcoleDATA - TPI Morgane Lebre v1.0.0" Height="800" Width="1280" WindowState="Maximized" MinHeight="600" MinWidth="1000" ContentRendered="Window_ContentRendered">
     <Window.Resources>
+        <!-- Ne peut pas être défini dans App.xaml -->
         <BitmapImage x:Key="FilterIcon" UriSource="/Media/icons/icons8-filter-16.png"/>
         <BitmapImage x:Key="CalendarIcon" UriSource="/Media/icons/icons8-calendar-16.png"/>
         <BitmapImage x:Key="ClearFiltersIcon" UriSource="/Media/icons/icons8-clear-filters-16.png"/>
